Update nav link with consistent padding to prevent 'jumping' when in hover state.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -165,7 +165,7 @@ h1 {
     min-width: 160px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 2;
-    padding: 0;
+    padding: 10px;
     top: 100%;
     left: 50%;
     transform: translate(-50%);
@@ -199,6 +199,7 @@ h1 {
     text-decoration: none;
     margin: 0px 10px;
     padding: 10px 10px;
+    box-sizing: border-box;
     position: relative;
     z-index: 0;
     cursor: pointer;
@@ -207,7 +208,7 @@ h1 {
 
 .nav-link:hover {
     color: #d8b8b8;
-    padding-bottom: 0;
+    padding-bottom: 10px;
 }
 
 /* --------- Navbar Link Animations */
